# rustcard

./: Cargo.toml
assets/: .txt
src/: card.rs  config.rs  main.rs  util.rs
src/asset_n_cfg/: consts.rs  font.rs  mod.rs  no_lc_img.rs
src/card_gen/: char_img.rs  char_path.rs  char_rank.rs  char_skill.rs  mod.rs  plr_info.rs
src/utils/: blend_alpha.rs  deprecated.rs  draw_blocks.rs  fetch_img.rs  img_size_manip.rs  mask.rs  mod.rs  outlined_draw.rs
